Implemented volume slider (except Master volume)

--- a/Fill-In-Combine/Info.plist
+++ b/Fill-In-Combine/Info.plist
@@ -7,5 +7,7 @@
 		<string>Musiqwik.ttf</string>
 		<string>Musisync.ttf</string>
 	</array>
+	<key>UIUserInterfaceStyle</key>
+	<string>Dark</string>
 </dict>
 </plist>
